--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -11,20 +11,23 @@
   --color-muted-200: var(--muted-200);
   --color-muted-400: var(--muted-400);
   --color-primary: var(--primary);
-  --color-primary-foregrund: var(--primary-foreground);
+  --color-primary-foreground: var(--primary-foreground);
+  --color-red: var(--red);
+  --color-green: var(--green);
   --font-sans: "GeneralSans-Variable";
 }
 
 :root {
   --background: rgba(237, 232, 227, 1);
   --foreground: rgba(0, 0, 0, 1);
-
+  --red: rgba(164, 0, 33, 1);
+  --green: rgba(32, 186, 110, 1);
   --accent-600: rgba(69, 196, 134, 1);
   --accent-400: rgba(49, 205, 99, 1);
   --accent-foreground: rgba(244, 243, 246, 1);
 
   --muted-200: rgba(237, 232, 226, 1);
-  --muted-400: rgba(116, 116, 117, 1);
+  --muted-400: rgba(116, 116, 117, 0.5);
 
   --primary: rgba(244, 243, 246, 1);
   --primary-foreground: rgba(25, 29, 99, 1);
@@ -32,6 +35,9 @@
 
 @layer base {
   body {
-    @apply bg-background text-foreground size-full;
+    @apply bg-background text-foreground;
+  }
+  #root {
+    @apply flex flex-col h-svh
   }
 }
